@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for extension &quot;solr_redmine&quot;</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="schedulerFieldRedmineServer">Redmine Server URL</label>
+			<label index="schedulerFieldDocumentsToIndexLimit">Number of documents to index</label>
+		</languageKey>
+	</data>
+</T3locallang>
